Nyt on kaikki menny solmuun

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Ohjelmointi/build/
 /JavaApplication4/nbproject/private/
 /Harjoitukset2/nbproject/private/
+Eiotetamukaan.txt
+/Harjoitukset2/build/
