Tässä on taas joitain muutoksia

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Harjoitukset2/nbproject/private/
 Eiotetamukaan.txt
 /Harjoitukset2/build/
+/Matriisilaskin/nbproject/private/
+/Matriisilaskin/build/
